# hs-streamly-zstd

./: cabal.project  flake.nix
streamly-zstd/: LICENSE  README.md  default.nix  streamly-zstd.cabal
streamly-zstd/lib/Streamly/: Zstd.hs
streamly-zstd/test/: Main.hs
